--- a/products/templates/products/includes/product_rating.html
+++ b/products/templates/products/includes/product_rating.html
@@ -1,57 +1,57 @@
 {% if product.rating > 4.5 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
 {% elif product.rating > 4 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-star-half-o"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star-half"></i>
 {% elif product.rating > 3.5 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 3 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-star-half-o"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star-half"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 2.5 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 2 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-star-half-o"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star-half"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 1.5 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 1 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-star-half-o"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star-half"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
 {% elif product.rating > 0.5 %}
-<i class="fa fa-solid fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
-<i class="fa fa-regular fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
+<i class="far fa-star"></i>
 {% else %}
 <p class="d-none small">No Rating</p>
 {% endif %}
