fix: testing home page styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,18 +19,18 @@
 <div class="container-fluid min-vh-100 main-content p-0">
   <div class="row h-100">
     <div class="col d-md-block">
-      <div class="mt-4">
-        <div class="pt-5">
+      <div class="mt-4 col-8 offset-2">
+        <div class="pt-5 home-message">
           <h2>Find Your Next Watch</h2>
           <p>
             Explore the latest additions to our watch collection and find your
             latest time piece.
           </p>
-          <div class="my-4">
+          <div class="my-4 float-end">
             <h4>
               <a
                 href="{% url 'products' %}"
-                class="btn-style btn mb-3"
+                class="btn-style btn rounded-1 px-5 py-3 text-uppercase mb-3"
                 aria-label="Go to the home page"
                 >Discover</a
               >
