doc: Adds deployment and features in readme. Creates testing.md file. Updates navlinks

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -68,5 +68,5 @@
 {% endblock %}
 <!-- END PROFILE SECTION -->
 {% block postloadjs %} {{ block.super }}
-<script src="{% static '/js/countryfields.js' %}"></script>
+<script src="{% static 'profiles/js/countryfields.js' %}"></script>
 {% endblock %}
