--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -14,13 +14,15 @@
     <!-- SEO -->
     <meta
       name="description"
-      content="Explore and find that latest watch to add to your time piece collection. The watches are a statement piece.
-    Tourbillon offers a wide range of watches for every occasion and for everyone. Free delivery when you spend over €100."
+      content="Explore and find that latest watch to add to your time piece collection.
+       The watches are a statement piece. Tourbillon offers a wide range of watches
+       for every occasion and for everyone. Free delivery when you spend over €100."
     />
     <meta
       name="keywords"
-      content="watches luxury brands, watch enthusiast, trending watch, tourbillon, luxury watches, statement piece, watch accessory, designer Watches,
-    luxury watch for unbeatable prices, wedding gift, supreme service, horology, Tourbillon luxury watch"
+      content="watches luxury brands, watch enthusiast, trending watch, tourbillon, 
+      luxury watches, statement piece, watch accessory, designer Watches,luxury watch 
+      for unbeatable prices, wedding gift, supreme service, horology, Tourbillon luxury watch"
     />
     <meta name="google-site-verification" content="" />
     {% endblock %}
