--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,23 +1,49 @@
-{% extends "base.html" %} {% load static %} {% block page_header %}
-<!-- BLOCK PAGE HEADER -->
+{% extends "base.html" %} {% load static %}
+
+<!-- HEAD HTML -->
+{% include "includes/head.html" %}
+<!-- END OF HEAD HTML -->
+
+<!-- Page Header -->
+{% block page_header %}
 <div class="container header-container">
   <div class="row">
     <div class="col"></div>
   </div>
 </div>
-<!-- END OF BLOCK PAGE HEADER -->
-{% endblock %} {% block content %}
+{% endblock %}
 
-<!-- CAROUSEL SECTION -->
-<!-- END OF CAROUSEL SECTION -->
+<!-- prettier-ignore -->
+{% block content %}
+<!-- LANDING PAGE -->
+<div class="container-fluid min-vh-100 main-content p-0">
+  <div class="row h-100">
+    <div class="col d-md-block">
+      <div class="mt-4 col-8 offset-2">
+        <div class="pt-5 home-message">
+          <h2>Find Your Next Watch</h2>
+          <p>
+            Explore the latest additions to our watch collection and find your
+            latest time piece.
+          </p>
+          <div class="my-4 float-end">
+            <h4>
+              <a
+                href="{% url 'products' %}"
+                class="btn-style btn rounded-1 px-5 py-3 text-uppercase mb-3"
+                aria-label="Go to the home page"
+                >Discover</a
+              >
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col"></div>
+  </div>
+</div>
 
-<!-- PRODUCTS SELECTED SECTION -->
-<!-- END OF PRODUCTS SELECTED SECTION -->
-
-<!-- BANNER BOTTOM -->
-<!-- END OF BANNER BOTTOM -->
-
-<!-- SERVICE REVIEW SECTION -->
-<!-- END OF SERVICE REVIEW SECTION -->
-
+<!-- END OF LANDING PAGE-->
 {% endblock %}
