--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,9 @@
   <!-- Header -->
   <header class="container-fluid fixed-top p-0">
     <div class="row pt-lg-2 d-none d-lg-flex">
-      <div
-        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-end"
-      >
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-end">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
-          <h2 class="my-0 logo">Tourbillon</h2>
+          <h1 class="my-0 logo">Tourbillon</h1>
         </a>
       </div>
       <!-- Search form  -->
@@ -57,6 +55,11 @@
               {% if request.user.is_authenticated %} 
                 {% if request.user.is_superuser %}
               <li>
+                <a href="{% url 'account_overview' %}" class="dropdown-item"
+                  >My Account</a
+                >
+              </li>
+              <li>
                 <a
                   href="{% url 'product_management' %}"
                   aria-label="Go to the product management page"
@@ -70,7 +73,7 @@
                   href="{% url 'profile' %}"
                   aria-label="Go to the profile page"
                   class="dropdown-item"
-                  >Profile</a
+                  >My Profile</a
                 >
               </li>
               <li>
@@ -148,8 +151,9 @@
     <div class="row text-center marquee">
       <h5 class="my-2 text-uppercase">
         <i class="fad fa-box-full"></i>
-        <!-- prettier-ignore -->
+        <!-- Delivery banner -->
         <span class="text-success">Free</span> delivery on orders over € 
+        <!-- Delivery variable -->
         {{ free_delivery_threshold }}!
       </h5>
     </div>
@@ -192,7 +196,7 @@
             <ul>
               <li>
                 <a
-                  href="https://www.facebook.com/profile.php?id=100086385370740"
+                  href="https://www.facebook.com/profile.php?id=100090798163373"
                   rel="noopener"
                   target="_blank"
                   aria-label="Go to the facebook company page"
@@ -218,96 +222,24 @@
               Discover how to find the best watch and enjoy exclusive products
               and offers via email
             </p>
-            <!-- Mailchimp form -->
-            <div id="mc_embed_signup">
-              <form
-                action="https://gmail.us17.list-manage.com/subscribe/post?u=fb60582b0e4e463b6bfd0e6f8&amp;id=ddd0b7edb6&amp;f_id=002d41e0f0"
-                method="post"
-                id="mc-embedded-subscribe-form"
-                name="mc-embedded-subscribe-form"
-                class="validate"
-                target="_blank"
-                novalidate
-              >
-                <div id="mc_embed_signup_scroll">
-                  <div class="mc-field-group pb-3">
-                    <input
-                      type="email"
-                      value=""
-                      name="EMAIL"
-                      class="required email"
-                      id="mce-EMAIL"
-                      placeholder="Subscriber email*"
-                      required
-                    />
-                  </div>
-                  <div id="mce-responses" class="clear foot">
-                    <div
-                      class="response"
-                      id="mce-error-response"
-                      style="display: none"
-                    ></div>
-                    <div
-                      class="response"
-                      id="mce-success-response"
-                      style="display: none"
-                    ></div>
-                  </div>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div
-                    style="position: absolute; left: -5000px"
-                    aria-hidden="true"
-                  >
-                    <input
-                      type="text"
-                      name="b_fb60582b0e4e463b6bfd0e6f8_ddd0b7edb6"
-                      tabindex="-1"
-                      value=""
-                    />
-                  </div>
-                  <div class="optionalParent">
-                    <div class="clear foot">
-                      <input
-                        type="submit"
-                        value="Subscribe"
-                        name="subscribe"
-                        id="mc-embedded-subscribe"
-                        class="button btn btn-info rounded-1"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <script src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-            <script>
-              (function ($) {
-                window.fnames = new Array();
-                window.ftypes = new Array();
-                fnames[0] = "EMAIL";
-                ftypes[0] = "email";
-                fnames[1] = "FNAME";
-                ftypes[1] = "text";
-                fnames[2] = "LNAME";
-                ftypes[2] = "text";
-                fnames[3] = "ADDRESS";
-                ftypes[3] = "address";
-                fnames[4] = "PHONE";
-                ftypes[4] = "phone";
-                fnames[5] = "BIRTHDAY";
-                ftypes[5] = "birthday";
-              })(jQuery);
-              var $mcj = jQuery.noConflict(true);
-            </script>
-            <!--End mc_embed_signup-->
           </div>
           <div class="col-sm-12 col-md-4">
             <h3 class="sub-title">Support</h3>
             <ul class="fw-lighter fs-6">
-              <li><a href="{% url 'faq_page' %}" class="footer-link"><i class="fas fa-phone pacific-blue"></i>FAQ</a></li>
+              <li>
+                <a href="{% url 'faq_page' %}" class="footer-link"
+                  ><i class="fas fa-phone pacific-blue"></i>FAQ</a
+                >
+              </li>
               <li>
                 <i class="far fa-envelope pacific-blue"></i>
-                info@tourbillon.com
+                <a
+                  href="#"
+                  class="footer-link"
+                  data-bs-toggle="modal"
+                  data-bs-target="#PolicyModal"
+                  >Privacy Policy</a
+                >
               </li>
               <li>
                 <i class="fas fa-home interactive-color"></i> Main Street -
@@ -325,11 +257,13 @@
         </p>
       </div>
     </div>
+    {% include 'includes/privacy_policy_modal.html' %}
   </footer>
   <!-- END OF FOOTER -->
 
   <!-- Postload JavaScript -->
-  {% block postloadjs %} {% include 'includes/base_script.html' %} 
+  {% block postloadjs %} {% include 'includes/base_script.html' %}
+  <!-- end JS -->
   {% endblock %}
 </body>
 </html>
