fix: parse error flagged in css validator for checkout.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!-- HEAD HTML -->
 {% include "includes/head.html" %}
-<!-- END OF HEAD HTML -->
+<!-- END HEAD HTML -->
 
 <body>
   <!-- Header -->
