--- a/questions/templates/questions/questions.html
+++ b/questions/templates/questions/questions.html
@@ -24,9 +24,9 @@
       <div class="accordion" id="question-{{question.id}}">
         <div class="card">
           <div class="card-header p-0" id="headingOne-{{question.id}}">
-            <h2 class="mb-0">
+            <h3 class="mb-0">
               <button
-                class="btn btn-block rounded-1 btn-style text-left p-3"
+                class="btn btn-block fs-5 rounded-1 text-left p-3"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseOne-{{question.id}}"
@@ -35,13 +35,13 @@
               >
                 {{question.question}}
               </button>
-            </h2>
+            </h3>
             {% if request.user.is_superuser %}
 
             <small class="text-uppercase ms-3">
               <a
                 href="{% url 'edit_faq' question.id %}"
-                class="text-success text-decoration-none p-1 rounded-1"
+                class="btn btn-sm btn-success text-decoration-none p-1 rounded-1"
                 >edit</a
               >
               <button
